--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@slack/bolt": "^3.12.2",
-    "jest": "^29.5.0",
     "typescript": "^5.0.2"
   },
   "scripts": {
@@ -16,5 +15,12 @@
     "start:dev": "nodemon",
     "start": "node dist/app.js",
     "test": "yarn jest"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.21.0",
+    "@types/jest": "^29.5.0",
+    "babel-jest": "^29.5.0"
   }
 }
